Массовое подтверждение всех изменений перед созданием ветки Animations

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div class="main-content">
+    <div id="action-bar"></div>
+    <div id="event-log-panel" style="max-width:520px;margin:24px auto 0 auto;"></div>
+    <div id="app"></div>
+  </div>
   <script type="module" src="renderer.js"></script>
 </body>
 </html> 
